fixed submit button

--- a/templates/studentinfo.html
+++ b/templates/studentinfo.html
@@ -24,7 +24,8 @@
       <option value="12">12</option>
     </select>
     <br>
-    <input type="submit" name="create-account-button" value="Finish Registering">
+    <input class="btn btn-success" type="submit" name="create-account-button" value="Finish Registering">
+    <br>
   </form>
-
+<br>
 {% endblock %}
