--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
       </button>
 	  </form>
 	<br>
-	<p>Don't have an account? <a href="/">Sign Up</a></p>
+	<p>Don't have an account? <a href="/studentAccount">Sign Up</a></p>
 	</div>
 	</center>
 {% endblock %}
