--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="/studentAccount">Register as Student</a>
           </li>
           <li class="nav-item">
-j           <a class="nav-link" href="/adminAccount">Register as Admin</a>
+            <a class="nav-link" href="/adminAccount">Register as Admin</a>
           </li>
         </ul>
         <a class="btn btn-outline-dark" href="/login">Login</a>
