--- a/templates/myOps.html
+++ b/templates/myOps.html
@@ -12,8 +12,8 @@
 {% block navbar_admin %} {% endblock %}
 
 {% block body %}
-<a href="/allOps" class="btn btn-primary" role="button">View All Opportunities</a>
-<br>
+<!-- <a href="/allOps" class="btn btn-primary" role="button">View All Opportunities</a>
+<br>-->
 <br>
   <h1> Your Saved Opportunities </h1>
   <table class="table">
