--- a/templates/view_op.html
+++ b/templates/view_op.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
-{% block navbar_logout %}
-{% block navbar_admin %}
+{% block navbar_logout %} {% endblock %}
+{% block navbar_admin %} {% endblock %}
 
 {% block header %}
   {% for message in get_flashed_messages() %}
