--- a/templates/register.html
+++ b/templates/register.html
@@ -6,44 +6,44 @@
 {% block navbar_admin %} {% endblock %}
 {% block body %}
 
-  {% for message in get_flashed_messages() %}
-    <i>{{ message }}</i>
-    <br>
-  {% endfor %}
+{% for message in get_flashed_messages() %}
+<i>{{ message }}</i>
+<br>
+{% endfor %}
 
-  <center>
+<center>
   {% if student %}
-    <h3>Create Student Account</h3>
-    <br>
-    <form action="/register" method="POST">
-  {% endif %}
+  <h3>Create Student Account</h3>
+  <br>
+  <form action="/register" method="POST" style="width:50%;">
+    {% endif %}
 
-  {% if admin %}
+    {% if admin %}
     <h3>Create Admin Account</h3>
     <br>
-    <form action="/register" method="POST">
-  {% endif %}
+    <form action="/register" method="POST" style="width:50%;">
+      {% endif %}
 
-  <div style="width:100%">
-  <label for="username">Username</label>
-  <input type="text" name="username" required>
-  <br>
-  <label for="password">Password</label>
-  <input type="password" name="password" required>
-  <br>
-  <label for="password2">Confirm Password</label>
-  <input type="password" name="password2" required>
-  <br>
-  {% if admin %}
-  <label for="adminCode">Admin Code</label>
-  <input type="text" name="adminCode" required>
-  <br>
-  <label for="email">Email</label>
-  <input type="text" name="email" required>
-  {% endif %}
-  <input type="submit" name="register-button" value="Sign Up">
-  <p>Already have an account? <a href="/login">Log In</a></p>
-  </div>
-</form>
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" name="username" required>
+        <br>
+        <label for="password">Password</label>
+        <input type="password" class="form-control" name="password" required>
+        <br>
+        <label for="password2">Confirm Password</label>
+        <input type="password" class="form-control" name="password2" required>
+        <br>
+        {% if admin %}
+        <label for="adminCode">Admin Code</label>
+        <input type="text" class="form-control" name="adminCode" required>
+        <br>
+        <label for="email">Email</label>
+        <input type="text" class="form-control" name="email" required>
+        {% endif %}
+        <input type="submit" name="register-button" value="Sign Up">
+        <p>Already have an account? <a href="/login">Log In</a></p>
+      </div>
+    </form>
 </center>
 {% endblock %}
