--- a/templates/base.html
+++ b/templates/base.html
@@ -19,15 +19,17 @@
         <a class="nav-link" href="/">
           Student Opportunities Bulletin
         </a>
-        <ul class="navbar-nav flex-row ml-md-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="/studentAccount">Register as Student</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/adminAccount">Register as Admin</a>
-          </li>
-        </ul>
-        <a class="btn btn-outline-dark" href="/login">Login</a>
+        <div class="navbar-collapse collapse">
+          <ul class="navbar-nav flex-row ml-md-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="/studentAccount">Register as Student</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/adminAccount">Register as Admin</a>
+            </li>
+          </ul>
+        </div>
+        <a class="btn btn-outline-dark" href="/login"><span class="glyphicon glyphicon-log-in" Login</a>
       </header>
     </div>
     <br>
@@ -35,12 +37,21 @@
     {# {% elif {{isAdmin()}} %} #}
     {% block navbar_admin %}
     <div style="background-color:#ff8c00; padding:3px;">
-      <nav class="navbar navbar-expand-lg flex-column flex-md-row justify-content-between">
-        <a class="nav-link" href="/">
-          <img src="{{url_for('static', filename = 'home_Image.jpg')}}" width="60">
-          Student Opportunities Bulletin
-        </a>
-        <div class="navbar-collapse collapse">
+      <!-- navbar -->
+      <nav class="navbar navbar-expand-md flex-column flex-md-row justify-content-between">
+        <div class="navbar-header">
+          <!-- logo -->
+          <a class="nav-link" href="/">
+            <img src="{{url_for('static', filename = 'home_Image.jpg')}}" width="60">
+            Student Opportunities Bulletin
+          </a>
+          <!-- collapsible button -->
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+        <!-- links -->
+        <div id="collapsibleNavbar" class="navbar-collapse collapse">
           <ul class="navbar-nav flex-row bd-navbar-nav">
             <!-- <li class="nav-item">
               <a class="nav-link" href="/admHome"> Home </a>
@@ -61,16 +72,22 @@
     {% endblock %}
     {% block navbar_stu %}
     <div style="background-color:#ff8c00; padding:3px;">
-      <nav class="navbar navbar-expand-lg flex-column flex-md-row justify-content-between">
-        <a class="nav-link" href="/">
-          <img src="{{url_for('static', filename = 'home_Image.jpg')}}" width="60">
-          Student Opportunities Bulletin
-        </a>
-        <div class="navbar-collapse collapse">
+      <nav class="navbar navbar-expand-lg flex-column flex-md-row justify-content-between navbar-fixed-top">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="/">
+            <img src="{{url_for('static', filename = 'home_Image.jpg')}}" width="60">
+            Student Opportunities Bulletin
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+        <!-- <div class="navbar-collapse collapse" id="collapsibleNavbar"> -->
+        <div>
           <ul class="navbar-nav flex-row bd-navbar-nav">
             <!-- <li class="nav-item">
-              <a class="nav-link" href="/studentHome"> Home </a>
-            </li> -->
+                 <a class="nav-link" href="/studentHome"> Home </a>
+                 </li> -->
             <li class="nav-item">
               <a class="nav-link" href="/myOps"> View Your Opportunities </a>
             </li>
@@ -81,7 +98,7 @@
         </div>
         <a class="nav-link btn btn-outline-dark" href="/logout">Logout</a>
       </nav>
-    </div>
+    </div> -->
     {% endblock %}
     {% block body %} {% endblock %}
   </body>
