sorting works, I just have trouble with writing them back in.

--- a/templates/allOps.html
+++ b/templates/allOps.html
@@ -24,9 +24,7 @@
   {% endblock %}
 
   {% block body %}
-  <!--
-    {% if admin %}<a href="/adminHome" class="btn btn-primary" role="button">Go Back</a>{% endif %}
-  -->
+<!--     {% if admin %}<a href="/adminHome" class="btn btn-primary" role="button">Go Back</a>{% endif %} -->
   <br>
   <div align="center">
     <h1> Opportunities </h1>
