It finally works. Yeet

--- a/templates/base.html
+++ b/templates/base.html
@@ -98,7 +98,7 @@
         </div>
         <a class="nav-link btn btn-outline-dark" href="/logout">Logout</a>
       </nav>
-    </div> -->
+    </div>
     {% endblock %}
     {% block body %} {% endblock %}
   </body>
