--- a/templates/stu_home.html
+++ b/templates/stu_home.html
@@ -30,9 +30,9 @@
 	<input type = "submit" value = "View Calendar">
   </form>
 
-  <!-- <form style = "margin-bottom: 10px;" action = "/addEvent">
+  <form style = "margin-bottom: 10px;" action = "/addEvent">
 	<input type = "submit" value = "Add Opportunity to Calendar">
-  </form> -->
+  </form> 
 {% endblock %}
 
 {% block footer %}
