--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 
   <head>
     <title> {% block title %} Student Opportunity Board {% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     {% block header %} {% endblock %}
   </head>
   <!-- <header>
@@ -29,7 +28,6 @@
             </li>
           </ul>
         </div>
-        <a class="btn btn-outline-dark" href="/login"><span class="glyphicon glyphicon-log-in" Login</a>
       </header>
     </div>
     <br>
